smart-city-portal/force-app/main/default/objects/Complaint__c/Complaint__c.object-meta.xml
<CustomObject>
    <label>Complaint</label>
    <pluralLabel>Complaints</pluralLabel>
    <nameField>
        <type>Text</type>
        <label>Complaint Name</label>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>