smart-city-portal/force-app/main/default/objects/Complaint__c/fields/Citizen_Email__c.field-meta.xml
<CustomField>
    <fullName>Citizen_Email__c</fullName>
    <label>Citizen Email</label>
    <type>Email</type>
</CustomField>