smart-city-portal/force-app/main/default/objects/Complaint__c/fields/Citizen_Name__c.field-meta.xml
<CustomField>
    <fullName>Citizen_Name__c</fullName>
    <label>Citizen Name</label>
    <type>Text</type>
    <length>100</length>
</CustomField>