smart-city-portal/force-app/main/default/objects/Complaint__c/fields/Citizen_Phone__c.field-meta.xml
<CustomField>
    <fullName>Citizen_Phone__c</fullName>
    <label>Citizen Phone</label>
    <type>Phone</type>
</CustomField>