smart-city-portal/force-app/main/default/objects/Complaint__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <inlineHelpText>Enter a rating from 1 to 5</inlineHelpText>
    <label>Feedback</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>