smart-city-portal/force-app/main/default/objects/Complaint__c/listViews/Electricity_Queue_Complaint.listView-meta.xml
<ListView>
    <fullName>Electricity_Queue_Complaint</fullName>
    <filterScope>Queue</filterScope>
    <label>Electricity Queue</label>
    <queue>Electricity_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>