smart-city-portal/force-app/main/default/objects/Complaint__c/listViews/Roads_Queue_Complaint.listView-meta.xml
<ListView>
    <fullName>Roads_Queue_Complaint</fullName>
    <filterScope>Queue</filterScope>
    <label>Roads Queue</label>
    <queue>Roads_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>