smart-city-portal/force-app/main/default/objects/Complaint__c/listViews/Waste_Management_Queue_Complaint.listView-meta.xml
<ListView>
    <fullName>Waste_Management_Queue_Complaint</fullName>
    <filterScope>Queue</filterScope>
    <label>Waste Management Queue</label>
    <queue>Waste_Management_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>