smart-city-portal/force-app/main/default/objects/Complaint__c/listViews/Water_Queue_Complaint.listView-meta.xml
<ListView>
    <fullName>Water_Queue_Complaint</fullName>
    <filterScope>Queue</filterScope>
    <label>Water Queue</label>
    <queue>Water_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>